fixed animation jumps

--- a/application/css/v2.scss
+++ b/application/css/v2.scss
@@ -1124,6 +1124,7 @@ img.missing {
 		margin-top: $unit * 2;
 	}
 }
+
 #publishing-dialogue {
   min-height: 200px;
   max-height: 90%;
@@ -1190,13 +1191,15 @@ img.missing {
 		}
 	}
 	.change-set {
-		@include rounded;
-    @include display-box;
 		cursor: pointer;
-		border: solid 3px transparent;
-		margin: $unit;
-		background-color: #fbfbfb;
-    border: solid 1px #f2f2f2;
+    padding: $unit $unit 0 $unit;
+    .inner {
+      @include rounded;
+      @include display-box;
+      border: solid 3px transparent;
+      background-color: #fbfbfb;
+      border: solid 1px #f2f2f2;
+    }
     .pages {
       @include box-flex;
       .title {
